trunk/Archive2/db/64caf4ee2c2224/output
main.cpp: In function 'int main()':
main.cpp:13:35: error: no match for ternary 'operator?:' (operand types are 'bool', 'A', and 'C')
     typedef decay_t<decltype(true ? declval<A>() : declval<C>())> aOrC;
                                   ^
main.cpp:13:65: error: template argument 1 is invalid
     typedef decay_t<decltype(true ? declval<A>() : declval<C>())> aOrC;
                                                                 ^
main.cpp:13:71: error: invalid type in declaration before ';' token
     typedef decay_t<decltype(true ? declval<A>() : declval<C>())> aOrC;
                                                                       ^
